@@ -81,8 +81,21 @@ static inline void create_main_window(const x::w::main_window &main_window,
 		new_list.selection_type=x::w::multiple_selection_type;
 
 	if (opts.rows->isSet())
-		new_list.height=opts.rows->value;
+	{
+		size_t min=opts.rows->value, max=min;
 
+		if (opts.maxrows->isSet())
+		{
+			max=opts.maxrows->value;
+		}
+
+		new_list.height(min, max);
+	}
+	else if (opts.maxrows->isSet())
+	{
+		auto v=opts.maxrows->value;
+		new_list.height(v, v);
+	}
 
 	// An optional callback that gets invoked whenever a list item gets
 	// selected or unselected.
